# sioncronaich

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  changelog.md.j2  logging.yaml  pyproject.toml
.github/workflows/: python-publish.yml  release.yml
reports/: coverage.xml
src/sioncronaich/: __init__.py  app.py  config.py  db.py  models.py  script.py
src/sioncronaich/static/: style.css
src/sioncronaich/templates/: index.html  table_partial.html
tests/: conftest.py  test_app.py  test_config.py  test_db.py  test_models.py  test_script.py
